# chaosnexus-forge

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Justfile  README.md  STYLE-GUIDE.md  audit_status.txt  files_to_process.txt  package.json  playwright.config.ts  pnpm-lock.yaml  test-serialize-2.ts  test-serialize.ts  update_frontend.sh  vite.config.js  vitest.config.ts
.agents/: monaco-chunk-metrics.txt
.github/: PULL_REQUEST_TEMPLATE.md
scripts/: about.hbs  generate-attributions-page.py  generate-canvases.ts  generate-frontend-licenses.mjs  generate-illustrative-canvases.ts  generate-licenses.sh  tauri-failsafe.js
src/: app.css  app.d.ts  app.html  monaco-edcore.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rhai-hir/: Cargo.toml
src-tauri/crates/rhai-rowan/: Cargo.toml
src-tauri/crates/rhai-sourcegen/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: cli_agent_bridge.rs  crucible_bridge.rs  engine_supervisor.rs  lib.rs  llm_bridge.rs  main.rs  mcp_registry.rs  nodes.rs  pending_plugins.rs  pending_plugins.rs.orig  pending_plugins.rs.patch  plugin_toml.rs  settings.rs  visualizer.rs
src-tauri/src/lsp/: mod.rs
src/lib/: assembly.svelte.ts  assembly_flow.test.ts  assembly_flow.ts  console_io.test.ts  console_io.ts  cycle_detector.test.ts  cycle_detector.ts  engine.svelte.ts  graph.test.ts  graph.ts  mcp.svelte.ts  monaco_providers.test.ts  monaco_providers.ts  (+10 more)
static/: splash.html
tests/: styleMock.js  visual-themes.spec.ts  vitest-setup.ts
(+135 files in other folders)
